Closed Bug 361529 Opened 18 years ago Closed 18 years ago

Font resolver doesn't work fine on some cases

Categories

(Core :: Graphics, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: masayuki, Assigned: masayuki)

References

()

Details

(Keywords: regression)

Attachments

(1 file, 1 obsolete file)

On my environment, the heading of following URL is not rendered correctly after bug 352174. http://alpha.sourceforge.jp/diary/ There are two bugs in my patch. 1. The resolver uses non-lower-cased string for hash key. 2. The resolver does not initialize the logfont structure.
Attached patch Patch rv1.0Splinter Review
This patch fixes the two issues.
Attachment #246289 - Flags: review?(pavlov)
Status: NEW → ASSIGNED
Attached image incorrect bold fonts (obsolete) —
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20061122 Minefield/3.0a1 still reports wrong fonts
Attachment #246289 - Flags: review?(pavlov) → review+
checked-in. (In reply to comment #2) > Created an attachment (id=246297) [edit] > incorrect bold fonts > > Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20061122 > Minefield/3.0a1 > > still reports wrong fonts looks like bug 361532, not as this.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Attachment #246297 - Attachment is obsolete: true
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: