Bug 361529 Font resolver doesn't work fine on some cases r=pavlov